# ai5-sdl2

./: .gitmodules  CONTROLLER.md  README.md  VERSION.md  flake.nix  meson.build  meson_options.txt  technology.haniwa.ai5-sdl2.metainfo.xml  technology.haniwa.ai5-sdl2.yml  version.h.in
.github/workflows/: build.yaml  windows.yaml
include/: ai5.h  anim.h  asset.h  audio.h  backlog.h  char.h  classics.h  cmdline.h  cursor.h  debug.h  dungeon.h  game.h  gfx.h  gfx_private.h  input.h  map.h  memory.h  menu.h  mixer.h  movie.h  popup_menu.h  savedata.h  sts_mixer.h  sys.h  texthook.h  util.h  vm.h  vm_private.h
src/: aishimai.c  anim.c  asset.c  audio.c  audio_interface.c  audio_mixer.c  audio_sdl_mixer.c  backlog.c  beyond.c  classics.c  cmdline.c  cursor.c  debug.c  doukyuusei.c  doukyuusei2.c  doukyuusei2_pal.c  dungeon.c  effect.c  gfx.c  input.c  isaku.c  kakyuusei.c  main.c  map.c  memory.c  menu.c  movie.c  popup_menu.c  savedata.c  shangrlia.c  sys.c  text.c  texthook.c  util.c  vm.c  yuno.c
src/isaku/: isaku.c  isaku.h  item_window.c
src/shuusaku/: menu.c  name.c  schedule.c  schedule_data.c  shuusaku.c  shuusaku.h  status.c  view.c
